@@ -6,6 +6,7 @@
 
           New Boxes:
             Autopilot Reefing Control
+            Log, Total and Trip. Thanks to Mike K for the suggestion.
 
           Box updates:
             SunlightBox: now aligned at top.
